# cmb_sbi

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
