[project]
name = "sbi-cosmo"
version = "0.1.0"
description = "Simulation-Based Inference notes, experiments, and tutorials using Python."
authors = [
    {name = "Binh Nguyen", email = "thi-yen-binh.nguyen@universite-paris-saclay.fr"},
]
dependencies = ["torch>=2.7.1", "numpy>=2.4.0", "matplotlib>=3.10.8", "sbi>=0.22.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings>=1.0.0",
    "mkdocstrings-python>=2.0.1",
]
